@@ -1,3 +1,7 @@
+--February 25,2010--
+- Implemented project notes as dockwidget.
+- Implemented import/export to GHNS.
+
 --February 22,2010--
 - Implemented installing non-plasmoids via publisher.
 
